GMM_Main/src/objects/Feedback_questions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Feedback__c</fullName>
        <label>Application Feedback ID</label>
        <referenceTo>Application_Feedback__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments_Required__c</fullName>
        <label>Comments Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <formula>IF(( ISPICKVAL( Score_yes_no__c,&quot;Yes&quot; ))
   , 100,IF(( ISPICKVAL( Score_yes_no__c,&quot;NO&quot;))
      ,0,IF(( ISPICKVAL( Score_yes_no__c,&quot;N/A&quot;))
       ,0,IF(( ISPICKVAL( Score_two_factor__c,&quot;Satisfactory&quot;))
         ,100,IF(( ISPICKVAL( Score_two_factor__c,&quot;Unsatisfactory&quot;))
          ,0,IF(( ISPICKVAL( Score_two_factor__c,&quot;N/A&quot;))
           ,0,IF(( ISPICKVAL( Score_four_factor__c,&quot;Exceeds&quot;)) 

,100,IF(( ISPICKVAL( Score_four_factor__c,&quot;Meets&quot;))
,66.66,IF(( ISPICKVAL( Score_four_factor__c,&quot;Partially Meets&quot;))
,33.33,IF(( ISPICKVAL( Score_four_factor__c,&quot;Does Not Meet&quot;))
,0, Score_number__c 


))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_four_factor__c</fullName>
        <label>Score</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_number__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_two_factor__c</fullName>
        <label>Score</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_yes_no__c</fullName>
        <label>Score</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scoring_Method__c</fullName>
        <label>Scoring Method</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number (1-100)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes/No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Factor Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four Factor Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Question2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Question</label>
        <referenceTo>Stage_Question__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stages_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stages ID</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Feedback Questions</relationshipLabel>
        <relationshipName>Feedback_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Score__c</fullName>
        <formula>( Score_Value__c * Weight__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Feedback Question</label>
    <nameField>
        <displayFormat>FQ-{0000}</displayFormat>
        <label>Feedback questions id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Score_Number</fullName>
        <active>false</active>
        <errorConditionFormula>Score_number__c &gt; 100</errorConditionFormula>
        <errorMessage>Score should be less than 100</errorMessage>
    </validationRules>
</CustomObject>